fix : practice trazability